myteo/test/analyze/type_check/tuple/index_out_of_bounds_error.myte
module test

type Tup (int, string, bool)

fun main() {
  val x: (int, string, bool) = (1, "str", true);
  val y: Tup = Tup (1, "str", true);

  (x[-1]: unit);
  (y[-1]: unit);
  (x[3]: unit);
  (y[3]: unit);
  (x[4]: unit);
  (y[4]: unit);
}